speedtest-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  labels:
    app: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: ghcr.io/librespeed/speedtest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
