ingress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true" 
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: alb 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-ingress
  annotations:
        alb.ingress.kubernetes.io/certificate-arn: #Your domain certificate arn from ACM for e.g. arn:aws:acm:me-central-1:886436945315:certificate/e424090c-de1f-40e1-8883-5c60b1e487c6
spec:
  ingressClassName: alb 
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: speedtest
                port:
                  number: 8082
